Try again to fix h-scroll on mobile.

--- a/_sass/_custom-layout.scss
+++ b/_sass/_custom-layout.scss
@@ -1,4 +1,5 @@
 body {
+    overflow-x: clip;
     overflow-x: hidden;
 }
 .no-bottom-margin {
@@ -103,7 +104,7 @@ body {
         position: absolute;
         top: 0;
         bottom: 0;
-        width: 100vw;
+        width: 200vmax;
         background: #00213c;
         z-index: -1;
     }
